Fixed links in dark mode

--- a/main.css
+++ b/main.css
@@ -67,6 +67,10 @@ h2 {
 		color: white;
 	}
 	
+	.contact-link {
+		color: white;
+	}
+	
 	.github {
 	fill: white;
 }
